--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
+encoding//handler/auth.py=utf-8
+encoding//handler/base.py=utf-8
 encoding//lib/encrypt.py=utf-8
 encoding/application.py=utf-8
 encoding/server.py=utf-8
