--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -4,6 +4,7 @@ encoding//handler/base.py=utf-8
 encoding//handler/friends.py=utf-8
 encoding//handler/index.py=utf-8
 encoding//handler/msg.py=utf-8
+encoding//handler/xsrf.py=utf-8
 encoding//lib/encrypt.py=utf-8
 encoding/application.py=utf-8
 encoding/server.py=utf-8
