--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -6,6 +6,9 @@ encoding//handler/index.py=utf-8
 encoding//handler/msg.py=utf-8
 encoding//handler/xsrf.py=utf-8
 encoding//lib/encrypt.py=utf-8
+encoding//lib/result.py=utf-8
+encoding//lib/status.py=utf-8
+encoding//model/user.py=utf-8
 encoding/application.py=utf-8
 encoding/server.py=utf-8
 encoding/urls.py=utf-8
