--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,16 @@
 eclipse.preferences.version=1
+encoding//DbServer/application.py=utf-8
+encoding//DbServer/handler/auth.py=utf-8
+encoding//DbServer/handler/base.py=utf-8
+encoding//DbServer/handler/delete.py=utf-8
+encoding//DbServer/handler/details.py=utf-8
+encoding//DbServer/handler/friends.py=utf-8
+encoding//DbServer/handler/index.py=utf-8
+encoding//DbServer/model/friends.py=utf-8
+encoding//DbServer/model/relation.py=utf-8
 encoding//DbServer/model/user.py=utf-8
+encoding//DbServer/server.py=utf-8
+encoding//DbServer/urls.py=utf-8
 encoding//WebServer/application.py=utf-8
 encoding//WebServer/handler/auth.py=utf-8
 encoding//WebServer/handler/base.py=utf-8
@@ -8,9 +19,9 @@ encoding//WebServer/handler/index.py=utf-8
 encoding//WebServer/handler/msg.py=utf-8
 encoding//WebServer/handler/socket.py=utf-8
 encoding//WebServer/handler/xsrf.py=utf-8
-encoding//WebServer/lib/encrypt.py=utf-8
-encoding//WebServer/lib/result.py=utf-8
-encoding//WebServer/lib/status.py=utf-8
 encoding//WebServer/server.py=utf-8
 encoding//WebServer/urls.py=utf-8
+encoding//lib/encrypt.py=utf-8
+encoding//lib/result.py=utf-8
+encoding//lib/status.py=utf-8
 encoding//test/websocket.py=utf-8
