--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,27 +1,23 @@
 eclipse.preferences.version=1
-encoding//DbServer/application.py=utf-8
-encoding//DbServer/handler/auth.py=utf-8
-encoding//DbServer/handler/base.py=utf-8
-encoding//DbServer/handler/delete.py=utf-8
-encoding//DbServer/handler/details.py=utf-8
-encoding//DbServer/handler/friends.py=utf-8
-encoding//DbServer/handler/index.py=utf-8
-encoding//DbServer/model/friends.py=utf-8
-encoding//DbServer/model/relation.py=utf-8
-encoding//DbServer/model/user.py=utf-8
-encoding//DbServer/server.py=utf-8
-encoding//DbServer/urls.py=utf-8
-encoding//WebServer/application.py=utf-8
-encoding//WebServer/handler/auth.py=utf-8
-encoding//WebServer/handler/base.py=utf-8
-encoding//WebServer/handler/friends.py=utf-8
-encoding//WebServer/handler/index.py=utf-8
-encoding//WebServer/handler/msg.py=utf-8
-encoding//WebServer/handler/socket.py=utf-8
-encoding//WebServer/handler/xsrf.py=utf-8
-encoding//WebServer/server.py=utf-8
-encoding//WebServer/urls.py=utf-8
+encoding//handler/auth.py=utf-8
+encoding//handler/base.py=utf-8
+encoding//handler/delete.py=utf-8
+encoding//handler/details.py=utf-8
+encoding//handler/error.py=utf-8
+encoding//handler/friends.py=utf-8
+encoding//handler/index.py=utf-8
+encoding//handler/msg.py=utf-8
+encoding//handler/socket.py=utf-8
+encoding//handler/test.py=utf-8
+encoding//handler/xsrf.py=utf-8
+encoding//lib/application.py=utf-8
 encoding//lib/encrypt.py=utf-8
+encoding//lib/model/friends.py=utf-8
+encoding//lib/model/relation.py=utf-8
+encoding//lib/model/user.py=utf-8
 encoding//lib/result.py=utf-8
 encoding//lib/status.py=utf-8
+encoding//lib/urls.py=utf-8
+encoding//test/login.py=utf-8
 encoding//test/websocket.py=utf-8
+encoding/server.py=utf-8
